--- a/src/main/resources/messages_ja_JP.properties
+++ b/src/main/resources/messages_ja_JP.properties
@@ -15,3 +15,6 @@ UploadBooklistForm.fileupload.isbn.lengtherr={0}\u884C\u76EE\u306EISBN\u306E\u30
 UploadBooklistForm.fileupload.isbn.numlengtherr={0}\u884C\u76EE\u306EISBN\u306E\u30C7\u30FC\u30BF\u306E\u6570\u5B57\u306E\u307F\u306E\u6587\u5B57\u6570\u304C10\u300113\u306E\u3044\u305A\u308C\u3067\u3082\u3042\u308A\u307E\u305B\u3093 ( {1} )\u3002
 UploadBooklistForm.fileupload.isbn.duplicateerr={0} \u306EISBN\u306E\u30C7\u30FC\u30BF\u304C {1}\u4EF6\u91CD\u8907\u3057\u3066\u3044\u307E\u3059\u3002
 UploadBooklistForm.fileupload.bookname.lengtherr={0}\u884C\u76EE\u306E\u66F8\u540D\u306E\u30C7\u30FC\u30BF\u306E\u6587\u5B57\u6570\u304C128\u6587\u5B57\u4EE5\u5185\u3067\u3042\u308A\u307E\u305B\u3093 ( {1} )\u3002
+
+LendingappForm.lendingAppId.emptyerr=\u8CB8\u51FA\u7533\u8ACBID\u304C\u6307\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+LendingappForm.lendingApp.nodataerr=\u6307\u5B9A\u3055\u308C\u305F\u8CB8\u51FA\u7533\u8ACBID\u306E\u30C7\u30FC\u30BF\u304C\u767B\u9332\u3055\u308C\u3066\u304A\u308A\u307E\u305B\u3093\u3002
