--- a/src/main/resources/messages_ja_JP.properties
+++ b/src/main/resources/messages_ja_JP.properties
@@ -18,3 +18,5 @@ UploadBooklistForm.fileupload.bookname.lengtherr={0}\u884C\u76EE\u306E\u66F8\u54
 
 LendingappForm.lendingAppId.emptyerr=\u8CB8\u51FA\u7533\u8ACBID\u304C\u6307\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 LendingappForm.lendingApp.nodataerr=\u6307\u5B9A\u3055\u308C\u305F\u8CB8\u51FA\u7533\u8ACBID\u306E\u30C7\u30FC\u30BF\u304C\u767B\u9332\u3055\u308C\u3066\u304A\u308A\u307E\u305B\u3093\u3002
+LendingappForm.lendingBookDtoList.notExistApply=\u6700\u4F4E\uFF11\u518A\u300C\u7533\u8ACB\u3059\u308B\u300D\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+LendingappForm.lendingBookDtoList.emptyReason=\u300C\u7533\u8ACB\u3059\u308B\u300D\u3092\u9078\u629E\u3057\u3066\u3044\u308B\u66F8\u7C4D\u306E\u7533\u8ACB\u7406\u7531\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
