--- a/src/main/resources/messages_ja_JP.properties
+++ b/src/main/resources/messages_ja_JP.properties
@@ -8,6 +8,8 @@ UserInfoUserDetailsService.usernameNotFound=\u5165\u529B\u3055\u308C\u305F ID \u
 typeMismatch.java.math.BigDecimal=\u6570\u5024\u3092\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
 typeMismatch.java.lang.Long=\u6570\u5024\u3092\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
 
+Global.optimisticLockException=\u65E2\u306B\u30C7\u30FC\u30BF\u304C\u66F4\u65B0\u3055\u308C\u3066\u3044\u308B\u305F\u3081\u66F4\u65B0\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002\u30C7\u30FC\u30BF\u3092\u8AAD\u307F\u8FBC\u307F\u76F4\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+
 UploadBooklistForm.fileupload.openerr=\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u3055\u308C\u305FCSV\u30D5\u30A1\u30A4\u30EB\u3092\u30AA\u30FC\u30D7\u30F3\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002
 UploadBooklistForm.fileupload.lengtherr={0}\u884C\u76EE\u306E\u30EC\u30B3\u30FC\u30C9\u306E\u9805\u76EE\u6570\u304C 2\u500B\u3067\u306F\u3042\u308A\u307E\u305B\u3093 ( {1}\u500B )\u3002
 UploadBooklistForm.fileupload.isbn.patternerr={0}\u884C\u76EE\u306EISBN\u306E\u30C7\u30FC\u30BF\u306B\u6570\u5B57\u3001\u30CF\u30A4\u30D5\u30F3\u4EE5\u5916\u306E\u6587\u5B57\u304C\u4F7F\u7528\u3055\u308C\u3066\u3044\u307E\u3059 ( {1} )\u3002
