--- a/src/main/resources/messages_ja_JP.properties
+++ b/src/main/resources/messages_ja_JP.properties
@@ -29,3 +29,4 @@ LendingapprovalForm.applyingBookFormList.approvalResult.notAllCheckedErr=\u5168\
 
 ConfirmresultParamForm.lendingAppId.emptyerr=\u8CB8\u51FA\u7533\u8ACBID\u304C\u6307\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 ConfirmresultForm.lendingApp.nodataerr=\u6307\u5B9A\u3055\u308C\u305F\u8CB8\u51FA\u7533\u8ACBID\u3067\u306F\u8CB8\u51FA\u627F\u8A8D\u3055\u308C\u3066\u304A\u308A\u307E\u305B\u3093\u3002
+Confirmresult.lendingUserId.notequalerr=\u7533\u8ACB\u8005\u4EE5\u5916\u306E\u30E6\u30FC\u30B6\u306E\u305F\u3081\u95B2\u89A7\u3067\u304D\u307E\u305B\u3093\u3002
