#128 ValidationMessages_ja_JP.properties に定義されたメッセージを messages_ja_JP.properties へ移動し、メッセージを native-to-ascii で変換せず UTF-8 のまま保存するようにしました

--- a/src/main/resources/messages_ja_JP.properties
+++ b/src/main/resources/messages_ja_JP.properties
@@ -1,32 +1,36 @@
-AbstractUserDetailsAuthenticationProvider.locked=\u5165\u529B\u3055\u308C\u305F ID \u306F\u30ED\u30C3\u30AF\u3055\u308C\u3066\u3044\u307E\u3059
-AbstractUserDetailsAuthenticationProvider.disabled=\u5165\u529B\u3055\u308C\u305F ID \u306F\u4F7F\u7528\u3067\u304D\u307E\u305B\u3093
-AbstractUserDetailsAuthenticationProvider.expired=\u5165\u529B\u3055\u308C\u305F ID \u306E\u6709\u52B9\u671F\u9650\u304C\u5207\u308C\u3066\u3044\u307E\u3059
-AbstractUserDetailsAuthenticationProvider.credentialsExpired=\u5165\u529B\u3055\u308C\u305F ID \u306E\u30D1\u30B9\u30EF\u30FC\u30C9\u306E\u6709\u52B9\u671F\u9650\u304C\u5207\u308C\u3066\u3044\u307E\u3059
-AbstractUserDetailsAuthenticationProvider.badCredentials=\u5165\u529B\u3055\u308C\u305F ID \u3042\u308B\u3044\u306F\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u6B63\u3057\u304F\u3042\u308A\u307E\u305B\u3093
-UserInfoUserDetailsService.usernameNotFound=\u5165\u529B\u3055\u308C\u305F ID \u3042\u308B\u3044\u306F\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u6B63\u3057\u304F\u3042\u308A\u307E\u305B\u3093
+AbstractUserDetailsAuthenticationProvider.locked=入力された ID はロックされています
+AbstractUserDetailsAuthenticationProvider.disabled=入力された ID は使用できません
+AbstractUserDetailsAuthenticationProvider.expired=入力された ID の有効期限が切れています
+AbstractUserDetailsAuthenticationProvider.credentialsExpired=入力された ID のパスワードの有効期限が切れています
+AbstractUserDetailsAuthenticationProvider.badCredentials=入力された ID あるいはパスワードが正しくありません
+UserInfoUserDetailsService.usernameNotFound=入力された ID あるいはパスワードが正しくありません
 
-typeMismatch.java.math.BigDecimal=\u6570\u5024\u3092\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
-typeMismatch.java.lang.Long=\u6570\u5024\u3092\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
+# Bean Validation 用メッセージ
+error.size.max = {max}文字以内で入力して下さい。
+javax.validation.constraints.NotNull.message=必須の入力項目です。
+org.hibernate.validator.constraints.Email.message=メールアドレスを入力して下さい。
+org.hibernate.validator.constraints.NotBlank.message=必須の入力項目です。
+typeMismatch.java.lang.Long=数値を入力して下さい。
 
-Global.optimisticLockException=\u65E2\u306B\u30C7\u30FC\u30BF\u304C\u66F4\u65B0\u3055\u308C\u3066\u3044\u308B\u305F\u3081\u66F4\u65B0\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002\u30C7\u30FC\u30BF\u3092\u8AAD\u307F\u8FBC\u307F\u76F4\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+Global.optimisticLockException=既にデータが更新されているため更新できませんでした。データを読み込み直してください。
 
-UploadBooklistForm.fileupload.openerr=\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u3055\u308C\u305FCSV\u30D5\u30A1\u30A4\u30EB\u3092\u30AA\u30FC\u30D7\u30F3\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002
-UploadBooklistForm.fileupload.lengtherr={0}\u884C\u76EE\u306E\u30EC\u30B3\u30FC\u30C9\u306E\u9805\u76EE\u6570\u304C 2\u500B\u3067\u306F\u3042\u308A\u307E\u305B\u3093 ( {1}\u500B )\u3002
-UploadBooklistForm.fileupload.isbn.patternerr={0}\u884C\u76EE\u306EISBN\u306E\u30C7\u30FC\u30BF\u306B\u6570\u5B57\u3001\u30CF\u30A4\u30D5\u30F3\u4EE5\u5916\u306E\u6587\u5B57\u304C\u4F7F\u7528\u3055\u308C\u3066\u3044\u307E\u3059 ( {1} )\u3002
-UploadBooklistForm.fileupload.isbn.lengtherr={0}\u884C\u76EE\u306EISBN\u306E\u30C7\u30FC\u30BF\u306E\u6587\u5B57\u6570\u304C17\u6587\u5B57\u4EE5\u5185\u3067\u3042\u308A\u307E\u305B\u3093 ( {1} )\u3002
-UploadBooklistForm.fileupload.isbn.numlengtherr={0}\u884C\u76EE\u306EISBN\u306E\u30C7\u30FC\u30BF\u306E\u6570\u5B57\u306E\u307F\u306E\u6587\u5B57\u6570\u304C10\u300113\u306E\u3044\u305A\u308C\u3067\u3082\u3042\u308A\u307E\u305B\u3093 ( {1} )\u3002
-UploadBooklistForm.fileupload.isbn.duplicateerr={0} \u306EISBN\u306E\u30C7\u30FC\u30BF\u304C {1}\u4EF6\u91CD\u8907\u3057\u3066\u3044\u307E\u3059\u3002
-UploadBooklistForm.fileupload.bookname.lengtherr={0}\u884C\u76EE\u306E\u66F8\u540D\u306E\u30C7\u30FC\u30BF\u306E\u6587\u5B57\u6570\u304C128\u6587\u5B57\u4EE5\u5185\u3067\u3042\u308A\u307E\u305B\u3093 ( {1} )\u3002
+UploadBooklistForm.fileupload.openerr=アップロードされたCSVファイルをオープンできませんでした。
+UploadBooklistForm.fileupload.lengtherr={0}行目のレコードの項目数が 2個ではありません ( {1}個 )。
+UploadBooklistForm.fileupload.isbn.patternerr={0}行目のISBNのデータに数字、ハイフン以外の文字が使用されています ( {1} )。
+UploadBooklistForm.fileupload.isbn.lengtherr={0}行目のISBNのデータの文字数が17文字以内でありません ( {1} )。
+UploadBooklistForm.fileupload.isbn.numlengtherr={0}行目のISBNのデータの数字のみの文字数が10、13のいずれでもありません ( {1} )。
+UploadBooklistForm.fileupload.isbn.duplicateerr={0} のISBNのデータが {1}件重複しています。
+UploadBooklistForm.fileupload.bookname.lengtherr={0}行目の書名のデータの文字数が128文字以内でありません ( {1} )。
 
-LendingappForm.lendingAppId.emptyerr=\u8CB8\u51FA\u7533\u8ACBID\u304C\u6307\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
-LendingappForm.lendingApp.nodataerr=\u6307\u5B9A\u3055\u308C\u305F\u8CB8\u51FA\u7533\u8ACBID\u306E\u30C7\u30FC\u30BF\u304C\u767B\u9332\u3055\u308C\u3066\u304A\u308A\u307E\u305B\u3093\u3002
-LendingappForm.lendingBookDtoList.notExistApply=\u6700\u4F4E\uFF11\u518A\u300C\u7533\u8ACB\u3059\u308B\u300D\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-LendingappForm.lendingBookDtoList.emptyReason=\u300C\u7533\u8ACB\u3059\u308B\u300D\u3092\u9078\u629E\u3057\u3066\u3044\u308B\u66F8\u7C4D\u306E\u7533\u8ACB\u7406\u7531\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+LendingappForm.lendingAppId.emptyerr=貸出申請IDが指定されていません。
+LendingappForm.lendingApp.nodataerr=指定された貸出申請IDのデータが登録されておりません。
+LendingappForm.lendingBookDtoList.notExistApply=最低１冊「申請する」を選択してください。
+LendingappForm.lendingBookDtoList.emptyReason=「申請する」を選択している書籍の申請理由を入力してください。
 
-LendingapprovalParamForm.lendingAppId.emptyerr=\u8CB8\u51FA\u7533\u8ACBID\u304C\u6307\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
-LendingapprovalForm.lendingApp.nodataerr=\u6307\u5B9A\u3055\u308C\u305F\u8CB8\u51FA\u7533\u8ACBID\u3067\u306F\u8CB8\u51FA\u7533\u8ACB\u3055\u308C\u3066\u304A\u308A\u307E\u305B\u3093\u3002
-LendingapprovalForm.applyingBookFormList.approvalResult.notAllCheckedErr=\u5168\u3066\u306E\u66F8\u7C4D\u3067\u627F\u8A8D\u304B\u5374\u4E0B\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+LendingapprovalParamForm.lendingAppId.emptyerr=貸出申請IDが指定されていません。
+LendingapprovalForm.lendingApp.nodataerr=指定された貸出申請IDでは貸出申請されておりません。
+LendingapprovalForm.applyingBookFormList.approvalResult.notAllCheckedErr=全ての書籍で承認か却下を選択してください。
 
-ConfirmresultParamForm.lendingAppId.emptyerr=\u8CB8\u51FA\u7533\u8ACBID\u304C\u6307\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
-ConfirmresultForm.lendingApp.nodataerr=\u6307\u5B9A\u3055\u308C\u305F\u8CB8\u51FA\u7533\u8ACBID\u3067\u306F\u8CB8\u51FA\u627F\u8A8D\u3055\u308C\u3066\u304A\u308A\u307E\u305B\u3093\u3002
-Confirmresult.lendingUserId.notequalerr=\u7533\u8ACB\u8005\u4EE5\u5916\u306E\u30E6\u30FC\u30B6\u306E\u305F\u3081\u95B2\u89A7\u3067\u304D\u307E\u305B\u3093\u3002
+ConfirmresultParamForm.lendingAppId.emptyerr=貸出申請IDが指定されていません。
+ConfirmresultForm.lendingApp.nodataerr=指定された貸出申請IDでは貸出承認されておりません。
+Confirmresult.lendingUserId.notequalerr=申請者以外のユーザのため閲覧できません。
